@@ -3413,9 +3413,14 @@ if (DelisOK) {
     case "BrowserBack":
 	if (subgroup && osdepginfo.style.opacity == 0) { 	
 		mediaList.innerHTML = "<h1><center style='font-size:" + fsRec + ";" + color_main_head + ";'>" + Lang[0] + "</center></h1>";
-		setTimeout("getRecList(); showMediaList();",100)
 		subgroup = 0;
 		subsubgroup = 0;
+		if (ShowSubDir) {
+			MakeRecList2();
+		} else {
+			MakeRecList();
+		}
+		setTimeout("showMediaList();",100)
 		break;
 	}
 	if (osdepginfo.style.opacity == 1) { osdepginfo.style.opacity = 0; break; }
@@ -3484,13 +3489,13 @@ if (DelisOK) {
 	}
 	if (getRecOK == 1) {
 		if (recGroup[currMed] !== 0 && subgroup == 0 && ShowSubDir) {
-			if (test_subgroup) {
+			if (subgroup_old) {
 			setTimeout("MakeRecList_sublevel(recGroup[currMed]); showMediaList();",100)
 			} else {
 			setTimeout("MakeRecList3(recGroup[currMed]); showMediaList();",100)
 			}
 			subgroup = 1;
-		} else if (recSubGroup[currMed] !== 0 && subgroup == 1 && subsubgroup == 0 && ShowSubDir && test_subgroup) {
+		} else if (recSubGroup[currMed] !== 0 && subgroup == 1 && subsubgroup == 0 && ShowSubDir && subgroup_old) {
 			setTimeout("MakeRecList_sublevel2(recGroup[currMed],recSubGroup[currMed]); showMediaList();",100)
 			subsubgroup = 1;
 		} else {
@@ -4325,7 +4330,6 @@ function MakeRecList2() {
 	{
 	 if (recTitl[i][1]) { 
 					if (recTitl[i][0] != x) {
-						
 						recList[i] = "\uE002\uE003" + recTitl[i][0];
 						xx += 1;
 					} else {
@@ -4400,6 +4404,7 @@ function MakeRecList_sublevel(GroupID) {
    for (var i=0;i<recTitl.length;i++)
 	{
 	if (recGroup[i] == GroupID) {
+	 Group_Header[GroupID] = recTitl[i][0];
 	 if (recTitl[i][2]) { 
 					if (recTitl[i][1] != x) {
 						
@@ -4507,7 +4512,8 @@ function showMediaList() {
 	if (getRecOK == 1) {
 		var htmlstring = "<h1><center style='font-size:" + fsRec + ";" + color_main_head + ";'>" + Lang[38] + "(" + Lang[46] + (100 - perc_space) + "%, " + (free_space/1024).toFixed(0) + " GB) </center></h1><table border='0'><tr>";
 
-		if (subgroup) { 
+		if (subgroup) {
+			htmlstring = "<h1><center style='font-size:" + fsRec + ";" + color_main_head + ";'>" + Group_Header[Number(recGroup[currMed])] + "</center></h1><table border='0'><tr>";
 			if (MaxInGroup < 14){ MaxMed = MaxInGroup; } else {MaxMed = 14; }
 		}
 		if (!subgroup) { 
