@@ -10,6 +10,8 @@ VDR 1.7.29+
 	Added German translation (Google Translate) so it must be corrected.
 	Fixed in GuideView the functionkey information. (After pressing Yellow, Back it wasn't right)
 	Duration of recording is show in Recordings list.
+	In recordings listing there is an other sublevel for directories, (use subgroup_old = 0 for old version)
+	In recordings listing, first sub directory is shown in Header
 
 
 0.24	vip.getmarks used for selecting getmarks 0 = restfulapi, 1 = SmartTVWeb (not all users have the newest SmartTVWeb)
